@@ -6,6 +6,7 @@ lib/Travel/Status/DE/IRIS/Result.pm
 lib/Travel/Status/DE/IRIS/Stations.pm
 MANIFEST			This list of files
 META.json
+META.yml
 README
 scripts/acronyms.pl
 scripts/acronyms.sh
@@ -35,5 +36,4 @@ t/in/plan/8000098/140103/23
 t/in/station/EBILP
 t/in/station/EDG
 t/in/station/EE
-META.yml
 SIGNATURE    Added here by Module::Build
